Fix measure animation on iOS

--- a/src/app/pages/measure/measure-scan/measure-scan.page.scss
+++ b/src/app/pages/measure/measure-scan/measure-scan.page.scss
@@ -215,7 +215,7 @@
       width: 100%;
       display: flex;
       align-items: center;
-      animation: moving-background 6s linear infinite;
+      animation: moving-background 6s 0.1s linear infinite;
 
       img {
         min-width: 100%;
